--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Budget App",
-  "short_name": "Budget",
+  "name": "NEXUS-7 Budget",
+  "short_name": "NEXUS",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0071e3",
+  "background_color": "#050507",
+  "theme_color": "#00f7ff",
   "icons": [
     {
       "src": "icon.png",
